# cudasv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
assets/citrus_orchard_ibl/diffuse/: i_nx.hdr  i_ny.hdr  i_nz.hdr  i_px.hdr  i_py.hdr  i_pz.hdr  sh.txt
assets/citrus_orchard_ibl/specular/: m0_ny.hdr  m0_nz.hdr  m0_px.hdr  m0_py.hdr  m0_pz.hdr  m1_nx.hdr  m1_ny.hdr  m1_nz.hdr  m1_px.hdr  m1_py.hdr  m1_pz.hdr  m2_nx.hdr  m2_ny.hdr  m2_nz.hdr  m2_px.hdr  m2_py.hdr  m2_pz.hdr  m3_nx.hdr  m3_ny.hdr  m3_nz.hdr  m3_px.hdr  m3_py.hdr  m3_pz.hdr  m4_nx.hdr  m4_ny.hdr  m4_nz.hdr  m4_px.hdr  m4_py.hdr  m4_pz.hdr  m5_nx.hdr  m5_ny.hdr  m5_nz.hdr  m5_px.hdr  m5_py.hdr  m5_pz.hdr  m6_nx.hdr  m6_ny.hdr  m6_nz.hdr  m6_px.hdr  m6_py.hdr  (+14 more)
assets/cudarf_test/: mip-checker.glb  mip-checker.json
assets/glb/: camera-controls_v023.glb
assets/sample_pack_4cam/: canonical-rig.json  ibl  run.sh
assets/sample_pack_4cam/config/: overlays.json  vehicle.json  views.json
docs/: architecture.md  benchmarks.md  camera_rig_debug.md  nuscenes-inspector.md  visibility_buffer.md
docs/schema/: rig.schema.json
scripts/: merge_compile_commands.sh  run_mip_test.sh  set_workspace.sh
src/engine_interface/: CMakeLists.txt
src/engine_interface/cmake/: engine_interfaceConfig.cmake.in
src/engine_interface/include/engine/: camera_config.hpp  camera_rig.hpp  extrinsics.hpp  intrinsics.hpp  vehicle_data.hpp
src/rf/: CMakeLists.txt
src/rf/cmake/: FindEGL.cmake  FindOpenGLES3.cmake  rfConfig.cmake.in
src/rf/include/rf/camera_control/: camera_control.hpp  rotator.hpp  viewpoint_animation.hpp
src/rf/include/rf/overlays/car/: car.hpp
src/rf/include/rf/overlays/vehicle/: vehicle.hpp
src/rf/include/rf/renderer/: animation.hpp  bounding_box.hpp  cuda_helpers.hpp  glcommon.hpp  glm_common.hpp  gltf_common.hpp  gltf_loader.hpp  ibl.hpp  image.hpp  material.hpp  math.hpp  mesh_geometry.hpp  point_light_component.hpp  primitive_component.hpp  renderer.hpp  scene.hpp  scene_component.hpp  texture.hpp  trs_transform.hpp  utils.hpp  virtual_camera.hpp
src/rf/include/rf/renderer/cudarf/: array_surface.hpp  cudarf.hpp  cudarf_camera.hpp  cudarf_profile.hpp  cudarf_rast.hpp  draw_list_renderer.hpp  gltf_loader.hpp  helpers.hpp  material.hpp  memory.hpp  output.hpp  stream.hpp  texture.hpp  types.hpp
src/rf/include/rf/renderer/surround_view/: projector.hpp
src/rf/src/camera_control/: camera_control.cpp  rotator.cpp  viewpoint_animation.cpp
src/rf/src/renderer/: animation.cpp  bounding_box.cpp  draw_list_renderer.cpp  gltf_common.cpp  gltf_loader.cpp  ibl.cpp  image.cpp  kernels.cu  material.cpp  mesh_geometry.cpp  point_light_component.cpp  primitive_component.cpp  scene.cpp  scene_component.cpp  trs_transform.cpp  utils.cpp  virtual_camera.cpp
src/rf/src/renderer/cudarf/: TAA.inl  TAA_common.hpp  array_surface.cpp  color_space.inl  cubemap.inl  cudarf.cpp  cudarf_blit.cu  cudarf_pipe.cu  cudarf_profile.cpp  frag_interpolation.inl  fragment.inl  frame_conventions.inl  framebuffer.inl  helpers_cudavec.inl  output.cpp  raster_naive.inl  test.inl  texture.cpp  texture.cu  tiler_bin.inl  tiler_coarse.inl  triangle.inl  utils.inl  vecglm.inl  visibuf.inl
src/rf/src/renderer/cudarf/raii/: array_surface.cpp
src/rf/src/renderer/gltf/: accessors.cpp  accessors.hpp  animation_loader.cpp  animation_loader.hpp  material_loader.cpp  material_loader.hpp  scene_loader.cpp  scene_loader.hpp
src/rf/src/renderer/surround_view/: projector.cu
src/sv_app/: CMakeLists.txt
src/sv_app/src/: conversion_utils.cpp  conversion_utils.hpp  main.cpp
src/sv_app/src/app/: app_context.hpp  app_runtime.cpp  app_runtime.hpp  cmdline.cpp  cmdline.hpp  demo_vehicle_signal_provider.cpp  demo_vehicle_signal_provider.hpp  demo_vehicle_signals.cpp  demo_vehicle_signals.hpp  glfw_host.cpp  glfw_host.hpp  nuscenes_inspector.cpp  nuscenes_inspector.hpp  test_scenario.cpp  test_scenario.hpp  vehicle_signal_provider.hpp
src/sv_app/src/compat/: render_bridge_4cam_contract.cpp  render_bridge_4cam_contract.hpp  runtime_source_bridge_4cam.cpp  runtime_source_bridge_4cam.hpp
src/sv_app/src/config/: canonical_rig.cpp  canonical_rig.hpp  config.cpp  config.hpp  runtime_calibration_bridge_4cam.cpp  runtime_calibration_bridge_4cam.hpp
src/sv_app/src/sources/: file_sequence_source.cpp  file_sequence_source.hpp  nuscenes_source.cpp  nuscenes_source.hpp  render_bridge_4cam.cpp  render_bridge_4cam.hpp  rigged_png_source_support.cpp  rigged_png_source_support.hpp  source_factory.cpp  source_factory.hpp  source_validation.cpp  source_validation.hpp
src/sv_engine/: CMakeLists.txt  build.sh
src/sv_engine/cmake/: sv_engineConfig.cmake.in
src/sv_engine/include/engine/: engine.hpp  frame_packet.hpp  frame_source.hpp  image_frame_loader.hpp  overlays_config.hpp  png_source.hpp  video_source.hpp  views_config.hpp
src/sv_engine/src/: engine.cpp  engine_frame.cpp  engine_init.cpp  engine_internal.hpp  engine_view_control.cpp  output_dump.cpp  sv_gl_common.cpp  sv_gl_common.hpp  world.cpp  world.hpp
src/sv_engine/src/overlays/2d/: sky_fade.cpp  sky_fade.hpp
src/sv_engine/src/overlays/underlay/: underlay.cpp  underlay.hpp
src/sv_engine/src/overlays/vehicle/: vehicle_controller.cpp  vehicle_controller.hpp
src/sv_engine/src/vehicle/: vehicle_state.cpp  vehicle_state.hpp
src/sv_engine/src/video_io/: image_frame_loader.cpp  png_source.cpp
src/sv_engine/src/views/: scene_pass_builder.cpp  scene_pass_builder.hpp  surround_view_composer.cpp  surround_view_composer.hpp  view_3d.cpp  view_3d.hpp  view_interaction_router.cpp  view_interaction_router.hpp  view_navigation_state.cpp  view_navigation_state.hpp  view_post_process_pipeline.cpp  view_post_process_pipeline.hpp  viewpoint_registry.cpp  viewpoint_registry.hpp
src/sv_engine/src/virtual_controls/viewpoints/: viewpoints.cpp  viewpoints.hpp
