cmake_minimum_required(VERSION 3.16)

if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES OR "${CMAKE_CUDA_ARCHITECTURES}" STREQUAL "")
    set(CMAKE_CUDA_ARCHITECTURES 89 CACHE STRING "CUDA architectures" FORCE)
endif()

if(NOT DEFINED CMAKE_CUDA_COMPILER OR "${CMAKE_CUDA_COMPILER}" STREQUAL "" OR NOT EXISTS "${CMAKE_CUDA_COMPILER}")
    find_program(CUDASV_NVCC
        NAMES nvcc
        HINTS /usr/local/cuda/bin
        PATH_SUFFIXES bin
    )
    if(CUDASV_NVCC)
        set(CMAKE_CUDA_COMPILER "${CUDASV_NVCC}" CACHE FILEPATH "CUDA compiler" FORCE)
    endif()
endif()

project(cudaSV LANGUAGES C CXX CUDA)

option(WITH_PROFILE_CUDA_TIME "Profile CUDARF cuda pipeline performance" OFF)
option(WITH_CUDA_COMPUTE_SANITIZER "Build CUDA code with sanitizer-friendly debug info" OFF)
option(WITH_TAA "Enable temporal anti-aliasing code paths" ON)
option(CUDARF_FORCE_AFFINE_BARYCENTRICS "Force affine barycentrics in CUDARF shading paths" OFF)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CUDA_STANDARD 20)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE "$ENV{SV_BUILD_TYPE}" CACHE STRING "Build type" FORCE)
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/usr/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/usr/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/usr/bin")

set(SPDLOG_BUILD_SHARED OFF CACHE BOOL "" FORCE)
set(SPDLOG_BUILD_PIC ON CACHE BOOL "" FORCE)
set(SPDLOG_BUILD_EXAMPLE OFF CACHE BOOL "" FORCE)
set(SPDLOG_BUILD_EXAMPLE_HO OFF CACHE BOOL "" FORCE)
set(SPDLOG_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(SPDLOG_BUILD_TESTS_HO OFF CACHE BOOL "" FORCE)
set(SPDLOG_BUILD_BENCH OFF CACHE BOOL "" FORCE)
set(SPDLOG_BUILD_WARNINGS OFF CACHE BOOL "" FORCE)

set(WITH_BUILD_NATIVE ON CACHE BOOL "" FORCE)

add_subdirectory(thirdparty/spdlog)
add_subdirectory(src/engine_interface)
add_subdirectory(src/rf)
add_subdirectory(src/sv_engine)
add_subdirectory(src/sv_app)
